feat: change branch for release/tag
Allow the user to edit the repository preview and modify the branch which will change the preview. In the case the branch that's provided via CLI args isn't valid for a repository, fallback to the default branch for the repository.

--- a/tagger.example.yml
+++ b/tagger.example.yml
@@ -1,6 +1,8 @@
 # GitHub API URL
 url: https://api.github.com/
 timeout: 1m0s
+# Defaults to the provided branch, or the default branch if not provided
+branch: main
 # URL used for authorization
 auth:
   url: https://github.com/
