--- a/releaser.example.yml
+++ b/releaser.example.yml
@@ -9,16 +9,17 @@ branch: main
 # major        Increment Major version 1.3.0 -> 2.0.0
 # minor        Increment Minor version 1.3.0 -> 1.4.0
 # patch        Increment Patch version 1.3.0 -> 1.3.1
-version: minor
+version:
+  change: minor
 # URL used for authorization
 auth:
   url: https://github.com/
 # Template
 #
 # Top Level Variables:
-# {{ .RepositoryName }}                  hello-world	
+# {{ .RepositoryName }}                  hello-world
 # {{ .RepositoryOwner }}                 octocat
-# {{ .RepositoryURL }}                   https://github.com/octocat/hello-world	
+# {{ .RepositoryURL }}                   https://github.com/octocat/hello-world
 # {{ .RepositoryDescription }}           Example description
 # {{ .RepositoryDefaultBranch }}         main
 # {{ .Commits }}                         List of commits
@@ -33,7 +34,7 @@ auth:
 # {{ .AuthorUsername }}                  octocat (GitHub Username)
 # {{ .AuthorName }}                      octocat (Commit Name)
 # {{ .AuthorEmail }}                     octocat@github.com
-# {{ .AuthorDate }} 
+# {{ .AuthorDate }}
 # {{ .AuthorURL }}                       https://github.com/octocat
 #
 # Templates also include Sprig functions: https://masterminds.github.io/sprig/strings.html
